--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0146.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0146.html
@@ -455,14 +455,9 @@
             <ins class="alt" title="nlp 2.00">ἴεται</ins>
           </span>
         </span>
-        <span id="w_84_1" class="ocr_word" title="bbox 1523 1017 1649 1067">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_85" class="ocr_word" title="bbox 1695 1037 1778 1067" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">καὶ δὴ</ins>
           </span>
         </span>
       </span>
@@ -764,28 +759,23 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_147" class="ocr_word" title="bbox 1752 1581 1888 1628" lang="grc">
+        <span id="w_147_0" class="ocr_word" title="bbox 1752 1581 1888 1628">
           <span class="alternatives">
-            <ins title="nlp 2.00">εὑρη-</ins>
+            <ins class="alt" title="nlp 2.00">εὑρημένην</ins>
           </span>
         </span>
-        <span id="w_148" class="ocr_word" title="bbox 1914 1583 1952 1616">
+        <span id="w_147_1" class="ocr_word" title="bbox 1752 1581 1888 1628">
           <span class="alternatives">
-            <ins title="nlp 2.00">ρ.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_149" class="ocr_word" title="bbox 1973 1582 2000 1615">
+        <span id="w_148_0" class="ocr_word" title="bbox 1914 1583 1952 1616">
           <span class="alternatives">
-            <ins title="nlp 2.00">9(??)</ins>
+            <ins class="alt" title="nlp 2.00">Ρ.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 207 1636 1890 1705">
-        <span id="w_150" class="ocr_word" title="bbox 207 1636 362 1702" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένην</ins>
-          </span>
-        </span>
         <span id="w_151" class="ocr_word" title="bbox 397 1637 532 1688" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λείαν</ins>
