--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0428.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0428.html
@@ -754,19 +754,19 @@
             <ins title="nlp 2.00">Φράγγοι</ins>
           </span>
         </span>
-        <span id="w_145" class="ocr_word" title="bbox 1488 1541 1659 1609" lang="grc">
+        <span id="w_145_0" class="ocr_word" title="bbox 1488 1541 1659 1609">
           <span class="alternatives">
-            <ins title="nlp 2.00">πρὸς]</ins>
+            <ins class="alt" title="nlp 2.00">[πρὸς]</ins>
+          </span>
+        </span>
+        <span id="w_145_1" class="ocr_word" title="bbox 1488 1541 1659 1609">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1702 1542 1759 1593" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
-          </span>
-        </span>
-        <span id="w_147" class="ocr_word" title="bbox 1791 1541 1937 1610" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Ἱεροσόλυμα</ins>
           </span>
         </span>
       </span>
