--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0610.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0610.html
@@ -114,19 +114,14 @@
             <ins title="nlp 2.00">. . . .</ins>
           </span>
         </span>
-        <span id="w_20_0" class="ocr_word" title="bbox 1372 403 1517 469">
+        <span id="w_20_0_0" class="ocr_word" title="bbox 1372 403 1517 469">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[τὴν]</ins>
           </span>
         </span>
-        <span id="w_20_1" class="ocr_word" title="bbox 1372 403 1517 469">
+        <span id="w_20_0_1" class="ocr_word" title="bbox 1372 403 1517 469">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
-        <span id="w_21" class="ocr_word" title="bbox 1552 403 1559 468">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
       </span>
@@ -151,12 +146,12 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_27_0" class="ocr_word" title="bbox 807 478 1212 547">
+        <span id="w_27_0_0" class="ocr_word" title="bbox 807 478 1212 547">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[Ἀσκληπιαδῶν</ins>
           </span>
         </span>
-        <span id="w_27_1" class="ocr_word" title="bbox 807 478 1212 547">
+        <span id="w_27_0_1" class="ocr_word" title="bbox 807 478 1212 547">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -169,11 +164,6 @@
         <span id="w_29" class="ocr_word" title="bbox 1428 482 1436 548">
           <span class="alternatives">
             <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
-        <span id="w_30" class="ocr_word" title="bbox 1469 478 1871 546" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑποστρέψαντες</ins>
           </span>
         </span>
       </span>
@@ -403,11 +393,6 @@
             <ins class="alt" title="nlp 2.00">γινώσ[κοντες,]</ins>
           </span>
         </span>
-        <span id="w_78_1" class="ocr_word" title="bbox 175 947 577 1014">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_79" class="ocr_word" title="bbox 607 947 624 1014">
           <span class="alternatives">
             <ins title="nlp 2.00">||</ins>
@@ -443,9 +428,14 @@
             <ins class="alt" title="nlp 1.00">ζωῆς</ins>
           </span>
         </span>
-        <span id="w_86" class="ocr_word" title="bbox 1607 963 1692 994" lang="grc">
+        <span id="w_86_0" class="ocr_word" title="bbox 1607 963 1692 994">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
+          </span>
+        </span>
+        <span id="w_86_1" class="ocr_word" title="bbox 1607 963 1692 994">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">βασιλέως</ins>
           </span>
         </span>
       </span>
@@ -923,14 +913,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_183_0" class="ocr_word" title="bbox 1582 1720 1783 1786">
+        <span id="w_183_0_0" class="ocr_word" title="bbox 1582 1720 1783 1786">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[γυνή,]</ins>
+            <ins class="alt" title="nlp 2.00">[γυνή,]</ins>
           </span>
         </span>
-        <span id="w_183_1" class="ocr_word" title="bbox 1582 1720 1783 1786">
+        <span id="w_183_0_1" class="ocr_word" title="bbox 1582 1720 1783 1786">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -997,19 +987,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_198_0" class="ocr_word" title="bbox 905 1876 981 1941">
+        <span id="w_198_0_0" class="ocr_word" title="bbox 905 1876 981 1941">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[ἐς</ins>
           </span>
         </span>
-        <span id="w_198_1" class="ocr_word" title="bbox 905 1876 981 1941">
+        <span id="w_198_0_1" class="ocr_word" title="bbox 905 1876 981 1941">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
-        <span id="w_199" class="ocr_word" title="bbox 1018 1875 1098 1942" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τὸ]</ins>
+            <ins class="alt" title="nlp 2.00">τὸ]</ins>
           </span>
         </span>
         <span id="w_200" class="ocr_word" title="bbox 1137 1894 1291 1925" lang="grc">
@@ -1086,12 +1071,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_215_0" class="ocr_word" title="bbox 571 2029 777 2097">
+        <span id="w_215_1_0" class="ocr_word" title="bbox 571 2029 777 2097">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[πάλιν]</ins>
+            <ins class="alt" title="nlp 2.00">[πάλιν]</ins>
           </span>
         </span>
-        <span id="w_215_1" class="ocr_word" title="bbox 571 2029 777 2097">
+        <span id="w_215_1_1" class="ocr_word" title="bbox 571 2029 777 2097">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1126,21 +1111,16 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_222" class="ocr_word" title="bbox 1627 2029 1828 2093" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κίνησιν</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 181 2105 1874 2174">
-        <span id="w_224_0" class="ocr_word" title="bbox 181 2108 308 2173">
+        <span id="w_224_0_0" class="ocr_word" title="bbox 181 2108 308 2173">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[τῶν</ins>
           </span>
         </span>
-        <span id="w_224_1" class="ocr_word" title="bbox 181 2108 308 2173">
+        <span id="w_224_0_1" class="ocr_word" title="bbox 181 2108 308 2173">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">σφ]</ins>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 354 2109 630 2173" lang="grc">
@@ -1161,11 +1141,6 @@
         <span id="w_228" class="ocr_word" title="bbox 1314 2108 1368 2156" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_229" class="ocr_word" title="bbox 1414 2105 1719 2174">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πολ|[λάκις]</ins>
           </span>
         </span>
       </span>
@@ -1472,12 +1447,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_291_0" class="ocr_word" title="bbox 613 2650 721 2715">
+        <span id="w_291_0_0" class="ocr_word" title="bbox 613 2650 721 2715">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[καὶ</ins>
           </span>
         </span>
-        <span id="w_291_1" class="ocr_word" title="bbox 613 2650 721 2715">
+        <span id="w_291_0_1" class="ocr_word" title="bbox 613 2650 721 2715">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1500,11 +1475,6 @@
         <span id="w_295" class="ocr_word" title="bbox 1504 2649 1558 2698" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_296" class="ocr_word" title="bbox 1591 2668 1677 2713" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
       </span>
