--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0147.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0147.html
@@ -985,11 +985,6 @@
             <ins class="alt" title="nlp 2.00">Ρ.</ins>
           </span>
         </span>
-        <span id="w_194_1" class="ocr_word" title="bbox 37 2009 77 2045">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_195" class="ocr_word" title="bbox 97 2012 134 2044">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">91</ins>
@@ -1022,7 +1017,7 @@
         </span>
         <span id="w_202" class="ocr_word" title="bbox 1246 1990 1492 2058" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀλήθειαν</ins>
+            <ins title="nlp 2.00">ἀλήθειαν ἐκκαλύπτειν</ins>
           </span>
         </span>
       </span>
@@ -1247,9 +1242,14 @@
             <ins class="alt" title="nlp 1.00">Ἀλέξιος</ins>
           </span>
         </span>
-        <span id="w_246" class="ocr_word" title="bbox 629 2458 736 2524" lang="grc">
+        <span id="w_246_0" class="ocr_word" title="bbox 629 2458 736 2524">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ </ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_246_1" class="ocr_word" title="bbox 629 2458 736 2524">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_247" class="ocr_word" title="bbox 782 2457 875 2524" lang="grc">
@@ -1280,11 +1280,6 @@
         <span id="w_252" class="ocr_word" title="bbox 1629 2462 1775 2520" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἥλιον</ins>
-          </span>
-        </span>
-        <span id="w_253" class="ocr_word" title="bbox 1812 2475 1857 2506" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἱ</ins>
           </span>
         </span>
       </span>
