--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0430.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0430.html
@@ -769,9 +769,14 @@
             <ins class="alt" title="nlp 1.00">ἠπείλει</ins>
           </span>
         </span>
-        <span id="w_148" class="ocr_word" title="bbox 946 1547 1197 1613" lang="grc">
+        <span id="w_148_0" class="ocr_word" title="bbox 946 1547 1197 1613">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐρρόχθει</ins>
+            <ins class="alt" title="nlp 2.00">(ἐρρόχθει</ins>
+          </span>
+        </span>
+        <span id="w_148_1" class="ocr_word" title="bbox 946 1547 1197 1613">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_149" class="ocr_word" title="bbox 1221 1545 1314 1612" lang="grc">
@@ -787,11 +792,6 @@
         <span id="w_151" class="ocr_word" title="bbox 1423 1554 1578 1610" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κῦμα,</ins>
-          </span>
-        </span>
-        <span id="w_152" class="ocr_word" title="bbox 1618 1549 1923 1613" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐτετρίγεσαν</ins>
           </span>
         </span>
       </span>
@@ -1209,7 +1209,7 @@
         </span>
         <span id="w_234_1" class="ocr_word" title="bbox 1770 2397 1913 2450">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">D</ins>
           </span>
         </span>
       </span>
@@ -1481,19 +1481,19 @@
             <ins class="alt" title="nlp 1.00">πῦρ</ins>
           </span>
         </span>
-        <span id="w_289" class="ocr_word" title="bbox 1430 1699 1571 1769" lang="grc">
+        <span id="w_289_0" class="ocr_word" title="bbox 1430 1699 1571 1769">
           <span class="alternatives">
-            <ins title="nlp 2.00">ούδὲ</ins>
+            <ins class="alt" title="nlp 2.00">(οὐδὲ</ins>
+          </span>
+        </span>
+        <span id="w_289_1" class="ocr_word" title="bbox 1430 1699 1571 1769">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_290" class="ocr_word" title="bbox 1609 1722 1699 1768" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
-          </span>
-        </span>
-        <span id="w_291" class="ocr_word" title="bbox 1738 1703 1892 1754" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐθάδε</ins>
           </span>
         </span>
       </span>
