--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0149.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0149.html
@@ -179,9 +179,9 @@
             <ins class="alt" title="nlp 1.00">καἰ</ins>
           </span>
         </span>
-        <span id="w_35" class="ocr_word" title="bbox 1592 557 1806 618" lang="grc">
+        <span id="w_35_0" class="ocr_word" title="bbox 1592 557 1806 618">
           <span class="alternatives">
-            <ins title="nlp 2.00">Παφλα-</ins>
+            <ins class="alt" title="nlp 2.00">Παφλαγονίας</ins>
           </span>
         </span>
       </span>
@@ -189,11 +189,6 @@
         <span id="w_36" class="ocr_word" title="bbox 63 643 93 674">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_37" class="ocr_word" title="bbox 115 631 281 697" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γονίας</ins>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 321 631 672 697" lang="grc">
@@ -1083,19 +1078,14 @@
             <ins class="alt" title="nlp 1.00">ἐξαπέστειλε</ins>
           </span>
         </span>
-        <span id="w_211_0" class="ocr_word" title="bbox 1379 2262 1539 2327">
+        <span id="w_211_0_0" class="ocr_word" title="bbox 1379 2262 1539 2327">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(πόλις</ins>
           </span>
         </span>
-        <span id="w_211_1" class="ocr_word" title="bbox 1379 2262 1539 2327">
+        <span id="w_211_0_1" class="ocr_word" title="bbox 1379 2262 1539 2327">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
-        <span id="w_212" class="ocr_word" title="bbox 1578 2263 1633 2312" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
       </span>
@@ -1399,14 +1389,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_275" class="ocr_word" title="bbox 737 2911 812 2942">
+        <span id="w_275_0" class="ocr_word" title="bbox 737 2911 812 2942">
           <span class="alternatives">
-            <ins title="nlp 2.00">δὲ</ins>
+            <ins class="alt" title="nlp 2.00">om</ins>
           </span>
         </span>
-        <span id="w_276" class="ocr_word" title="bbox 843 2898 877 2941">
+        <span id="w_275_1" class="ocr_word" title="bbox 737 2911 812 2942">
           <span class="alternatives">
-            <ins title="nlp 2.00">F</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
