--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0431.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0431.html
@@ -1113,7 +1113,7 @@
         </span>
         <span id="w_219_1" class="ocr_word" title="bbox 1667 2158 1795 2222">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
