--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0611.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0611.html
@@ -43,12 +43,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_6_0" class="ocr_word" title="bbox 324 321 735 392">
+        <span id="w_6_0_0" class="ocr_word" title="bbox 324 321 735 392">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[αὐτοκρ]άτορος</ins>
+            <ins class="alt" title="nlp 2.00">[αὐτοκρ]άτορος</ins>
           </span>
         </span>
-        <span id="w_6_1" class="ocr_word" title="bbox 324 321 735 392">
+        <span id="w_6_0_1" class="ocr_word" title="bbox 324 321 735 392">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -71,11 +71,6 @@
         <span id="w_10" class="ocr_word" title="bbox 1199 334 1426 398" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βασιλίδα</ins>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1463 336 1554 403" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δια|</ins>
           </span>
         </span>
       </span>
@@ -115,14 +110,14 @@
             <ins title="nlp 2.00">. . . . . . .</ins>
           </span>
         </span>
-        <span id="w_20_0" class="ocr_word" title="bbox 1412 408 1723 479">
+        <span id="w_20_0_0" class="ocr_word" title="bbox 1412 408 1723 479">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[ἀσφ]υξίαν.</ins>
+            <ins class="alt" title="nlp 2.00">[ἀσφ]υξίαν.</ins>
           </span>
         </span>
-        <span id="w_20_1" class="ocr_word" title="bbox 1412 408 1723 479">
+        <span id="w_20_0_1" class="ocr_word" title="bbox 1412 408 1723 479">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">ἡ</ins>
           </span>
         </span>
       </span>
@@ -162,12 +157,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_29_0" class="ocr_word" title="bbox 1015 485 1088 550">
+        <span id="w_29_0_0" class="ocr_word" title="bbox 1015 485 1088 550">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[οἱ</ins>
           </span>
         </span>
-        <span id="w_29_1" class="ocr_word" title="bbox 1015 485 1088 550">
+        <span id="w_29_0_1" class="ocr_word" title="bbox 1015 485 1088 550">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -180,11 +175,6 @@
         <span id="w_31" class="ocr_word" title="bbox 1398 488 1613 552" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δηλῶσαι</ins>
-          </span>
-        </span>
-        <span id="w_32" class="ocr_word" title="bbox 1647 510 1703 538" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
       </span>
@@ -288,12 +278,12 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 146 710 1827 787">
-        <span id="w_54_0" class="ocr_word" title="bbox 146 710 497 777">
+        <span id="w_54_0_0" class="ocr_word" title="bbox 146 710 497 777">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[ἐληλυθέναι]</ins>
+            <ins class="alt" title="nlp 2.00">[ἐληλυθέναι]</ins>
           </span>
         </span>
-        <span id="w_54_1" class="ocr_word" title="bbox 146 710 497 777">
+        <span id="w_54_0_1" class="ocr_word" title="bbox 146 710 497 777">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -316,11 +306,6 @@
         <span id="w_58" class="ocr_word" title="bbox 995 725 1255 781" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀρτηριῶν,</ins>
-          </span>
-        </span>
-        <span id="w_59" class="ocr_word" title="bbox 1277 736 1422 783" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔγωγε</ins>
           </span>
         </span>
       </span>
@@ -632,12 +617,12 @@
             <ins title="nlp 2.00">ἀποκλαύσομαι;</ins>
           </span>
         </span>
-        <span id="w_120_0" class="ocr_word" title="bbox 924 1254 1069 1321">
+        <span id="w_120_0_0" class="ocr_word" title="bbox 924 1254 1069 1321">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[τήν]</ins>
+            <ins class="alt" title="nlp 2.00">[τήν]</ins>
           </span>
         </span>
-        <span id="w_120_1" class="ocr_word" title="bbox 924 1254 1069 1321">
+        <span id="w_120_0_1" class="ocr_word" title="bbox 924 1254 1069 1321">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -650,11 +635,6 @@
         <span id="w_122" class="ocr_word" title="bbox 1144 1274 1191 1305" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τε</ins>
-          </span>
-        </span>
-        <span id="w_123" class="ocr_word" title="bbox 1236 1258 1501 1321" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βασιλικὴν</ins>
           </span>
         </span>
       </span>
@@ -736,12 +716,12 @@
             <ins class="alt" title="nlp 1.00">κοκκοβαφῆ</ins>
           </span>
         </span>
-        <span id="w_140_0" class="ocr_word" title="bbox 989 1408 1216 1476">
+        <span id="w_140_0_0" class="ocr_word" title="bbox 989 1408 1216 1476">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[πέδιλα]</ins>
+            <ins class="alt" title="nlp 2.00">[πέδιλα]</ins>
           </span>
         </span>
-        <span id="w_140_1" class="ocr_word" title="bbox 989 1408 1216 1476">
+        <span id="w_140_0_1" class="ocr_word" title="bbox 989 1408 1216 1476">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -759,11 +739,6 @@
         <span id="w_143" class="ocr_word" title="bbox 1427 1411 1598 1459" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ποδῶν</ins>
-          </span>
-        </span>
-        <span id="w_144" class="ocr_word" title="bbox 1621 1408 1822 1475" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀπορριψαμένη</ins>
           </span>
         </span>
       </span>
@@ -981,14 +956,14 @@
             <ins class="alt" title="nlp 1.00">ὁμιλήσασα,</ins>
           </span>
         </span>
-        <span id="w_189_0" class="ocr_word" title="bbox 1538 1793 1822 1858">
+        <span id="w_189_0_0" class="ocr_word" title="bbox 1538 1793 1822 1858">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[λα]|βοῦσα</ins>
           </span>
         </span>
-        <span id="w_189_1" class="ocr_word" title="bbox 1538 1793 1822 1858">
+        <span id="w_189_0_1" class="ocr_word" title="bbox 1538 1793 1822 1858">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1038,9 +1013,9 @@
             <ins class="alt" title="nlp 1.00">ζοφώδη</ins>
           </span>
         </span>
-        <span id="w_200" class="ocr_word" title="bbox 1674 1866 1820 1918" lang="grc">
+        <span id="w_200_0" class="ocr_word" title="bbox 1674 1866 1820 1918">
           <span class="alternatives">
-            <ins title="nlp 2.00">κάλυ-</ins>
+            <ins class="alt" title="nlp 2.00">κάλυπτραν</ins>
           </span>
         </span>
       </span>
@@ -1048,11 +1023,6 @@
         <span id="w_201" class="ocr_word" title="bbox 85 1972 118 2003">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_202" class="ocr_word" title="bbox 141 1969 300 2016" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πτραν</ins>
           </span>
         </span>
         <span id="w_203" class="ocr_word" title="bbox 338 1950 542 2001" lang="grc">
@@ -1214,19 +1184,19 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_234" class="ocr_word" title="bbox 1253 2099 1483 2166">
+        <span id="w_234_0" class="ocr_word" title="bbox 1253 2099 1483 2166">
           <span class="alternatives">
-            <ins title="nlp 2.00">[φωνὴν]</ins>
+            <ins class="alt" title="nlp 2.00">[φωνὴν]</ins>
+          </span>
+        </span>
+        <span id="w_234_1" class="ocr_word" title="bbox 1253 2099 1483 2166">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_235" class="ocr_word" title="bbox 1517 2101 1524 2166">
           <span class="alternatives">
             <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
-        <span id="w_236" class="ocr_word" title="bbox 1558 2099 1821 2164" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐθρήνουν,</ins>
           </span>
         </span>
       </span>
@@ -1239,11 +1209,6 @@
         <span id="w_238_0" class="ocr_word" title="bbox 474 2181 645 2247">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">γοερὸν</ins>
-          </span>
-        </span>
-        <span id="w_238_1" class="ocr_word" title="bbox 474 2181 645 2247">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_239" class="ocr_word" title="bbox 681 2177 1087 2245" lang="grc">
@@ -1271,9 +1236,14 @@
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_244" class="ocr_word" title="bbox 1643 2171 1818 2239" lang="grc">
+        <span id="w_244_0" class="ocr_word" title="bbox 1643 2171 1818 2239">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φωνὰς</ins>
+            <ins class="alt" title="nlp 2.00">φωνὰς</ins>
+          </span>
+        </span>
+        <span id="w_244_1" class="ocr_word" title="bbox 1643 2171 1818 2239">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
@@ -1360,9 +1330,9 @@
             <ins class="alt" title="nlp 1.00">οὖν</ins>
           </span>
         </span>
-        <span id="w_264" class="ocr_word" title="bbox 1711 2328 1822 2393" lang="grc">
+        <span id="w_264_0" class="ocr_word" title="bbox 1711 2328 1822 2393">
           <span class="alternatives">
-            <ins title="nlp 2.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">[καὶ</ins>
           </span>
         </span>
       </span>
