--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0150.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0150.html
@@ -311,7 +311,7 @@
         </span>
         <span id="w_56_1" class="ocr_word" title="bbox 1915 729 1954 763">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">93</ins>
           </span>
         </span>
       </span>
@@ -1317,11 +1317,6 @@
             <ins class="alt" title="nlp 2.00">τόδ᾿</ins>
           </span>
         </span>
-        <span id="w_250_0_1" class="ocr_word" title="bbox 213 2567 299 2615">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_250_1" class="ocr_word" title="bbox 213 2567 299 2615">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ὑπαγορευόντων</ins>
@@ -1349,7 +1344,7 @@
         </span>
         <span id="w_255" class="ocr_word" title="bbox 1323 2584 1729 2650" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μεγαλοδύναμον</ins>
+            <ins title="nlp 2.00">μεγαλοδύναμον ἐξουσίαν</ins>
           </span>
         </span>
       </span>
