--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0433.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0433.html
@@ -646,14 +646,14 @@
             <ins class="alt" title="nlp 1.00">ἀναλαβέσθαι</ins>
           </span>
         </span>
-        <span id="w_122" class="ocr_word" title="bbox 1554 1395 1815 1456" lang="grc">
+        <span id="w_122_0" class="ocr_word" title="bbox 1554 1395 1815 1456">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοσαύτας</ins>
+            <ins class="alt" title="nlp 2.00">(τοσαύτας</ins>
           </span>
         </span>
-        <span id="w_123" class="ocr_word" title="bbox 1842 1413 1893 1445">
+        <span id="w_122_1" class="ocr_word" title="bbox 1554 1395 1815 1456">
           <span class="alternatives">
-            <ins title="nlp 2.00">15</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -861,14 +861,14 @@
             <ins title="nlp 2.00">μετ᾿ αὐτῶν </ins>
           </span>
         </span>
-        <span id="w_164" class="ocr_word" title="bbox 1689 1779 1813 1832" lang="grc">
+        <span id="w_164_0" class="ocr_word" title="bbox 1689 1779 1813 1832">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀνα-</ins>
+            <ins class="alt" title="nlp 2.00">ἀναδέξασθαι</ins>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 1837 1803 1879 1835">
+        <span id="w_164_1" class="ocr_word" title="bbox 1689 1779 1813 1832">
           <span class="alternatives">
-            <ins title="nlp 2.00">20</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
