--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0612.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0612.html
@@ -52,9 +52,14 @@
             <ins class="alt" title="nlp 1.00">ἐμὲ</ins>
           </span>
         </span>
-        <span id="w_8" class="ocr_word" title="bbox 931 326 1272 395" lang="grc">
+        <span id="w_8_0" class="ocr_word" title="bbox 931 326 1272 395">
           <span class="alternatives">
-            <ins title="nlp 2.00">θαυ[μάσιον]</ins>
+            <ins class="alt" title="nlp 2.00">[μάσινον]</ins>
+          </span>
+        </span>
+        <span id="w_8_1" class="ocr_word" title="bbox 931 326 1272 395">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1307 329 1314 396">
@@ -70,11 +75,6 @@
         <span id="w_11" class="ocr_word" title="bbox 1455 325 1732 380" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀλλόκοτον.</ins>
-          </span>
-        </span>
-        <span id="w_12" class="ocr_word" title="bbox 1790 337 1896 390" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πῶς</ins>
           </span>
         </span>
       </span>
@@ -171,12 +171,12 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_33_0" class="ocr_word" title="bbox 1561 484 1681 551">
+        <span id="w_33_0_0" class="ocr_word" title="bbox 1561 484 1681 551">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[ἐγὼ</ins>
+            <ins class="alt" title="nlp 2.00">[ἐγὰ</ins>
           </span>
         </span>
-        <span id="w_33_1" class="ocr_word" title="bbox 1561 484 1681 551">
+        <span id="w_33_0_1" class="ocr_word" title="bbox 1561 484 1681 551">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -184,11 +184,6 @@
         <span id="w_34" class="ocr_word" title="bbox 1729 486 1847 551" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">τὴν]</ins>
-          </span>
-        </span>
-        <span id="w_35_0" class="ocr_word" title="bbox 1889 483 2014 560">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
       </span>
@@ -265,12 +260,12 @@
             <ins class="alt" title="nlp 1.00">τοῦτο</ins>
           </span>
         </span>
-        <span id="w_51_0" class="ocr_word" title="bbox 1095 636 1469 706">
+        <span id="w_51_0_0" class="ocr_word" title="bbox 1095 636 1469 706">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[ἐπε]|πόνθειν,</ins>
+            <ins class="alt" title="nlp 2.00">[ἐπε]|πόνθειν,</ins>
           </span>
         </span>
-        <span id="w_51_1" class="ocr_word" title="bbox 1095 636 1469 706">
+        <span id="w_51_0_1" class="ocr_word" title="bbox 1095 636 1469 706">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -278,11 +273,6 @@
         <span id="w_52" class="ocr_word" title="bbox 1534 641 1635 698" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πῶς</ins>
-          </span>
-        </span>
-        <span id="w_53" class="ocr_word" title="bbox 1672 657 1762 688" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐκ</ins>
           </span>
         </span>
       </span>
@@ -307,11 +297,6 @@
             <ins class="alt" title="nlp 2.00">μετε|ώρων</ins>
           </span>
         </span>
-        <span id="w_58_1" class="ocr_word" title="bbox 758 717 1027 784">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_59" class="ocr_word" title="bbox 1061 736 1222 781" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτὴν</ins>
@@ -327,9 +312,14 @@
             <ins title="nlp 2.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_62" class="ocr_word" title="bbox 1513 715 1636 766" lang="grc">
+        <span id="w_62_0" class="ocr_word" title="bbox 1513 715 1636 766">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατὰ</ins>
+            <ins class="alt" title="nlp 2.00">κατὰ</ins>
+          </span>
+        </span>
+        <span id="w_62_1" class="ocr_word" title="bbox 1513 715 1636 766">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κυμάτων</ins>
           </span>
         </span>
       </span>
@@ -339,12 +329,12 @@
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_66_0" class="ocr_word" title="bbox 282 791 519 860">
+        <span id="w_66_0_0" class="ocr_word" title="bbox 282 791 519 860">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[έρριψα]</ins>
+            <ins class="alt" title="nlp 2.00">[έρριψα]</ins>
           </span>
         </span>
-        <span id="w_66_1" class="ocr_word" title="bbox 282 791 519 860">
+        <span id="w_66_0_1" class="ocr_word" title="bbox 282 791 519 860">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -382,11 +372,6 @@
         <span id="w_73" class="ocr_word" title="bbox 1703 791 1734 843" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἀ</ins>
-          </span>
-        </span>
-        <span id="w_75" class="ocr_word" title="bbox 1806 837 1815 846">
-          <span class="alternatives">
-            <ins title="nlp 2.00">. . .</ins>
           </span>
         </span>
       </span>
@@ -473,14 +458,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_94" class="ocr_word" title="bbox 1481 946 1747 1015" lang="grc">
+        <span id="w_94_0" class="ocr_word" title="bbox 1481 946 1747 1015">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀρ]οίμην</ins>
+            <ins class="alt" title="nlp 2.00">[ἀρ]οίμην</ins>
           </span>
         </span>
-        <span id="w_95" class="ocr_word" title="bbox 1784 950 1894 1014" lang="grc">
+        <span id="w_94_1" class="ocr_word" title="bbox 1481 946 1747 1015">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐγώ.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -646,12 +631,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_129_0" class="ocr_word" title="bbox 535 1258 776 1326">
+        <span id="w_129_0_0" class="ocr_word" title="bbox 535 1258 776 1326">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[ἐ]πέσβη</ins>
+            <ins class="alt" title="nlp 2.00">[ἐ]πέσβη</ins>
           </span>
         </span>
-        <span id="w_129_1" class="ocr_word" title="bbox 535 1258 776 1326">
+        <span id="w_129_0_1" class="ocr_word" title="bbox 535 1258 776 1326">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -679,11 +664,6 @@
         <span id="w_134" class="ocr_word" title="bbox 1537 1263 1725 1324" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μᾶλλον</ins>
-          </span>
-        </span>
-        <span id="w_135" class="ocr_word" title="bbox 1771 1261 1826 1310" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
       </span>
@@ -780,19 +760,24 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_156_0" class="ocr_word" title="bbox 1436 1416 1563 1481">
+        <span id="w_156_0_0" class="ocr_word" title="bbox 1436 1416 1563 1481">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[μὴν</ins>
           </span>
         </span>
-        <span id="w_156_1" class="ocr_word" title="bbox 1436 1416 1563 1481">
+        <span id="w_156_0_1" class="ocr_word" title="bbox 1436 1416 1563 1481">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">ζ]</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 1599 1415 1781 1480" lang="grc">
+        <span id="w_157_0" class="ocr_word" title="bbox 1599 1415 1781 1480">
           <span class="alternatives">
-            <ins title="nlp 2.00">ζ]ῶμεν</ins>
+            <ins class="alt" title="nlp 2.00">ῶμεν</ins>
+          </span>
+        </span>
+        <span id="w_157_1" class="ocr_word" title="bbox 1599 1415 1781 1480">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -827,12 +812,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_165_0" class="ocr_word" title="bbox 1097 1491 1236 1560">
+        <span id="w_165_0_0" class="ocr_word" title="bbox 1097 1491 1236 1560">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[ἐπ᾿]</ins>
           </span>
         </span>
-        <span id="w_165_1" class="ocr_word" title="bbox 1097 1491 1236 1560">
+        <span id="w_165_0_1" class="ocr_word" title="bbox 1097 1491 1236 1560">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -840,11 +825,6 @@
         <span id="w_166" class="ocr_word" title="bbox 1255 1491 1421 1552" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄλλοις</ins>
-          </span>
-        </span>
-        <span id="w_167" class="ocr_word" title="bbox 1436 1500 1607 1542" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κακῶν</ins>
           </span>
         </span>
       </span>
@@ -931,14 +911,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_186_0" class="ocr_word" title="bbox 1662 1649 1894 1715">
+        <span id="w_186_0_0" class="ocr_word" title="bbox 1662 1649 1894 1715">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[ἐπ]ηλάθημεν</ins>
+            <ins class="alt" title="nlp 2.00">[ἐπ]ηλάθημεν</ins>
           </span>
         </span>
-        <span id="w_186_1" class="ocr_word" title="bbox 1662 1649 1894 1715">
+        <span id="w_186_0_1" class="ocr_word" title="bbox 1662 1649 1894 1715">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">D</ins>
           </span>
         </span>
       </span>
@@ -1307,12 +1287,12 @@
             <ins title="nlp 2.00">. . . . . . .</ins>
           </span>
         </span>
-        <span id="w_259_0" class="ocr_word" title="bbox 778 2268 956 2334">
+        <span id="w_259_0_0" class="ocr_word" title="bbox 778 2268 956 2334">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[κατ]ά</ins>
+            <ins class="alt" title="nlp 2.00">[κατ]ά</ins>
           </span>
         </span>
-        <span id="w_259_1" class="ocr_word" title="bbox 778 2268 956 2334">
+        <span id="w_259_0_1" class="ocr_word" title="bbox 778 2268 956 2334">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1330,11 +1310,6 @@
         <span id="w_262" class="ocr_word" title="bbox 1601 2264 1847 2334" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀκούομεν</ins>
-          </span>
-        </span>
-        <span id="w_263" class="ocr_word" title="bbox 1887 2269 1892 2337">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
       </span>
@@ -1421,14 +1396,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_281_0" class="ocr_word" title="bbox 1327 2422 1692 2489">
+        <span id="w_281_0_0" class="ocr_word" title="bbox 1327 2422 1692 2489">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[ἀναίσθητον]</ins>
+            <ins class="alt" title="nlp 2.00">[ἀναίσθητον]</ins>
           </span>
         </span>
-        <span id="w_281_1" class="ocr_word" title="bbox 1327 2422 1692 2489">
+        <span id="w_281_0_1" class="ocr_word" title="bbox 1327 2422 1692 2489">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">φύσιν</ins>
           </span>
         </span>
       </span>
@@ -1458,12 +1433,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_288_0" class="ocr_word" title="bbox 1189 2499 1396 2566">
+        <span id="w_288_0_0" class="ocr_word" title="bbox 1189 2499 1396 2566">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[νατον]</ins>
           </span>
         </span>
-        <span id="w_288_1" class="ocr_word" title="bbox 1189 2499 1396 2566">
+        <span id="w_288_0_1" class="ocr_word" title="bbox 1189 2499 1396 2566">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1471,11 +1446,6 @@
         <span id="w_289" class="ocr_word" title="bbox 1458 2519 1542 2549" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_290" class="ocr_word" title="bbox 1598 2520 1667 2559" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰς</ins>
           </span>
         </span>
       </span>
@@ -1517,12 +1487,7 @@
         </span>
         <span id="w_299_0" class="ocr_word" title="bbox 1167 2576 1631 2644">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[κακοπα]θεστέρα</ins>
-          </span>
-        </span>
-        <span id="w_299_1" class="ocr_word" title="bbox 1167 2576 1631 2644">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">[κακοπα]θεστέρα ἐκείνης, </ins>
           </span>
         </span>
       </span>
@@ -1557,12 +1522,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_307_0" class="ocr_word" title="bbox 1044 2655 1153 2721">
+        <span id="w_307_0_0" class="ocr_word" title="bbox 1044 2655 1153 2721">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[καὶ</ins>
           </span>
         </span>
-        <span id="w_307_1" class="ocr_word" title="bbox 1044 2655 1153 2721">
+        <span id="w_307_0_1" class="ocr_word" title="bbox 1044 2655 1153 2721">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1570,11 +1535,6 @@
         <span id="w_308" class="ocr_word" title="bbox 1192 2651 1423 2722" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἐσχάτας]</ins>
-          </span>
-        </span>
-        <span id="w_309" class="ocr_word" title="bbox 1469 2662 1569 2706" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
       </span>
