--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0436.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0436.html
@@ -375,7 +375,7 @@
       <span class="ocr_line" title="bbox 191 946 1888 1015">
         <span id="w_70" class="ocr_word" title="bbox 191 948 324 1014" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὔτε</ins>
+            <ins title="nlp 2.00">(οὔτε</ins>
           </span>
         </span>
         <span id="w_71" class="ocr_word" title="bbox 361 968 454 1015" lang="grc">
@@ -1076,19 +1076,19 @@
             <ins class="alt" title="nlp 1.00">σχήμασιν</ins>
           </span>
         </span>
-        <span id="w_209" class="ocr_word" title="bbox 1335 2029 1443 2090" lang="grc">
+        <span id="w_209_0" class="ocr_word" title="bbox 1335 2029 1443 2090">
           <span class="alternatives">
-            <ins title="nlp 2.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_209_1" class="ocr_word" title="bbox 1335 2029 1443 2090">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 1480 2029 1574 2097" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
-          </span>
-        </span>
-        <span id="w_211" class="ocr_word" title="bbox 1613 2040 1886 2096" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἑκασταχοῦ</ins>
           </span>
         </span>
       </span>
