--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0437.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0437.html
@@ -1260,9 +1260,9 @@
             <ins class="alt" title="nlp 1.00">πόλεως.</ins>
           </span>
         </span>
-        <span id="w_248" class="ocr_word" title="bbox 1766 2303 1835 2348" lang="grc">
+        <span id="w_248_0" class="ocr_word" title="bbox 1766 2303 1835 2348">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἦν</ins>
+            <ins class="alt" title="nlp 2.00">ἠν</ins>
           </span>
         </span>
       </span>
@@ -1497,14 +1497,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 143 2828 1629 2895">
-        <span id="w_294_0" class="ocr_word" title="bbox 143 2839 322 2882">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">malim’</ins>
-          </span>
-        </span>
         <span id="w_294_1" class="ocr_word" title="bbox 143 2839 322 2882">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">malim'</ins>
           </span>
         </span>
         <span id="w_295" class="ocr_word" title="bbox 356 2839 566 2883">
@@ -1524,7 +1519,7 @@
         </span>
         <span id="w_298" class="ocr_word" title="bbox 1361 2855 1563 2894" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χρήματι</ins>
+            <ins title="nlp 2.00">χρήματι C</ins>
           </span>
         </span>
       </span>
