--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0438.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0438.html
@@ -481,7 +481,7 @@
         </span>
         <span id="w_89_1" class="ocr_word" title="bbox 1681 909 1859 972">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
@@ -746,9 +746,14 @@
             <ins class="alt" title="nlp 1.00">βασιλείᾳ,</ins>
           </span>
         </span>
-        <span id="w_142" class="ocr_word" title="bbox 1233 1393 1294 1432" lang="grc">
+        <span id="w_142_0" class="ocr_word" title="bbox 1233 1393 1294 1432">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἃν</ins>
+            <ins class="alt" title="nlp 2.00">ἃς</ins>
+          </span>
+        </span>
+        <span id="w_142_1" class="ocr_word" title="bbox 1233 1393 1294 1432">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1322 1373 1406 1423" lang="grc">
@@ -759,11 +764,6 @@
         <span id="w_144" class="ocr_word" title="bbox 1442 1371 1728 1438" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀναμαθὼν</ins>
-          </span>
-        </span>
-        <span id="w_145" class="ocr_word" title="bbox 1766 1393 1857 1423" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐκ</ins>
           </span>
         </span>
       </span>
