--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0439.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0439.html
@@ -469,7 +469,7 @@
         </span>
         <span id="w_86_1" class="ocr_word" title="bbox 1653 1697 1799 1727">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
