--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0613.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0613.html
@@ -164,12 +164,12 @@
             <ins title="nlp 2.00">Β</ins>
           </span>
         </span>
-        <span id="w_29_0" class="ocr_word" title="bbox 150 524 264 594">
+        <span id="w_29_0_0" class="ocr_word" title="bbox 150 524 264 594">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[τὰ]</ins>
           </span>
         </span>
-        <span id="w_29_1" class="ocr_word" title="bbox 150 524 264 594">
+        <span id="w_29_0_1" class="ocr_word" title="bbox 150 524 264 594">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -197,16 +197,6 @@
         <span id="w_34" class="ocr_word" title="bbox 1275 546 1356 592" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μοι</ins>
-          </span>
-        </span>
-        <span id="w_35" class="ocr_word" title="bbox 1380 529 1600 594" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀφόρητα</ins>
-          </span>
-        </span>
-        <span id="w_36" class="ocr_word" title="bbox 1619 528 1623 594" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
       </span>
@@ -397,12 +387,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_75_0" class="ocr_word" title="bbox 883 834 1210 899">
+        <span id="w_75_0_0" class="ocr_word" title="bbox 883 834 1210 899">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[παθ]ήματα</ins>
+            <ins class="alt" title="nlp 2.00">[παθ]ήματα</ins>
           </span>
         </span>
-        <span id="w_75_1" class="ocr_word" title="bbox 883 834 1210 899">
+        <span id="w_75_0_1" class="ocr_word" title="bbox 883 834 1210 899">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -410,11 +400,6 @@
         <span id="w_76" class="ocr_word" title="bbox 1237 834 1305 893" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰς</ins>
-          </span>
-        </span>
-        <span id="w_77" class="ocr_word" title="bbox 1332 833 1560 899" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκτριβὴν</ins>
           </span>
         </span>
       </span>
@@ -652,12 +637,12 @@
             <ins class="alt" title="nlp 1.00">λόγος</ins>
           </span>
         </span>
-        <span id="w_128_0" class="ocr_word" title="bbox 397 1219 614 1288">
+        <span id="w_128_0_0" class="ocr_word" title="bbox 397 1219 614 1288">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[ἐχέτω],</ins>
+            <ins class="alt" title="nlp 2.00">[ἐχέτω],</ins>
           </span>
         </span>
-        <span id="w_128_1" class="ocr_word" title="bbox 397 1219 614 1288">
+        <span id="w_128_0_1" class="ocr_word" title="bbox 397 1219 614 1288">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -690,11 +675,6 @@
         <span id="w_134" class="ocr_word" title="bbox 1383 1215 1576 1285" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λυπηρὰ</ins>
-          </span>
-        </span>
-        <span id="w_135" class="ocr_word" title="bbox 1600 1217 1801 1283" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πλ[έον]</ins>
           </span>
         </span>
       </span>
