--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0441.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0441.html
@@ -443,7 +443,7 @@
         </span>
         <span id="w_86_1" class="ocr_word" title="bbox 1596 1049 1806 1099">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
