--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0616.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0616.html
@@ -1852,9 +1852,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1102 1401 1902 1459">
-        <span id="w_342" class="ocr_word" title="bbox 1102 1401 1324 1446">
+        <span id="w_342_0" class="ocr_word" title="bbox 1102 1401 1324 1446">
           <span class="alternatives">
-            <ins title="nlp 2.00">Arietaria testudo</ins>
+            <ins class="alt" title="nlp 2.00">arietaria</ins>
+          </span>
+        </span>
+        <span id="w_342_1" class="ocr_word" title="bbox 1102 1401 1324 1446">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">estudo</ins>
           </span>
         </span>
         <span id="w_344" class="ocr_word" title="bbox 1548 1406 1783 1459">
@@ -2371,9 +2376,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1152 2416 1669 2473">
-        <span id="w_442" class="ocr_word" title="bbox 1292 2417 1336 2460">
+        <span id="w_442_0" class="ocr_word" title="bbox 1292 2417 1336 2460">
           <span class="alternatives">
-            <ins title="nlp 2.00">dam II</ins>
+            <ins class="alt" title="nlp 2.00">II</ins>
+          </span>
+        </span>
+        <span id="w_442_1" class="ocr_word" title="bbox 1292 2417 1336 2460">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_443" class="ocr_word" title="bbox 1370 2422 1462 2470">
@@ -2384,11 +2394,6 @@
         <span id="w_444" class="ocr_word" title="bbox 1494 2423 1544 2460">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">21</ins>
-          </span>
-        </span>
-        <span id="w_445" class="ocr_word" title="bbox 1569 2432 1669 2473">
-          <span class="alternatives">
-            <ins title="nlp 2.00">sqq. </ins>
           </span>
         </span>
       </span>
