--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0443.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0443.html
@@ -263,7 +263,7 @@
         </span>
         <span id="w_47_1" class="ocr_word" title="bbox 1681 658 1804 706">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -500,9 +500,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 79 1175 1801 1247">
-        <span id="w_95" class="ocr_word" title="bbox 79 1177 273 1245" lang="grc">
+        <span id="w_95_0" class="ocr_word" title="bbox 79 1177 273 1245">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀρεως</ins>
+            <ins class="alt" title="nlp 2.00">Ἄρεως</ins>
+          </span>
+        </span>
+        <span id="w_95_1" class="ocr_word" title="bbox 79 1177 273 1245">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 320 1175 635 1244" lang="grc">
@@ -528,11 +533,6 @@
         <span id="w_101" class="ocr_word" title="bbox 1408 1182 1604 1230" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Κιλικίᾳ</ins>
-          </span>
-        </span>
-        <span id="w_102" class="ocr_word" title="bbox 1649 1196 1801 1247" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">προσώκειλε,</ins>
           </span>
         </span>
       </span>
@@ -1318,7 +1318,7 @@
         </span>
         <span id="w_255_1" class="ocr_word" title="bbox 1594 2592 1778 2640">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
